@@ -1,5 +1,10 @@
 2008-01-28  Luca Ferretti  <elle.uca@libero.it>
 
+	* gnome-clock-applet-mechanism.policy.in:
+	Change <message> strings to match the ones from PolicyKit package.
+
+2008-01-28  Luca Ferretti  <elle.uca@libero.it>
+
 	* gnome-clock-applet-mechanism.policy.in: fix my broken patch...
 
 2008-01-28  Vincent Untz  <vuntz@gnome.org>
